--- a/quantum.cabal
+++ b/quantum.cabal
@@ -6,8 +6,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Quantum.QProcessor
+                     , Quantum.QProcessor.Gate
+                     , Quantum.QProcessor.Internal
   build-depends:       base >= 4.7 && < 5
-                     , parsec == 3.*
+                     , mtl
+                     , random
+                     , vector 
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
   default-language:    Haskell2010
 
@@ -19,5 +23,7 @@ test-suite quantum-test
   build-depends:       base >= 4.7 && < 5
                      , hspec == 2.*
                      , quantum
+                     , mtl
+                     , vector 
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
