--- a/quantum.cabal
+++ b/quantum.cabal
@@ -8,10 +8,12 @@ library
   exposed-modules:     Quantum.QProcessor
                      , Quantum.QProcessor.Gate
                      , Quantum.QProcessor.Internal
+                     , Quantum.QProcessor.Manipulator
   build-depends:       base >= 4.7 && < 5
                      , mtl
+                     , operational
                      , random
-                     , vector 
+                     , vector
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
   default-language:    Haskell2010
 
@@ -19,11 +21,14 @@ test-suite quantum-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Quantum.QProcessorSpec
+  other-modules:       TestUtils
+                     , Quantum.QProcessorSpec
+                     , Quantum.QProcessor.InternalSpec
+                     , Quantum.QProcessor.ManipulatorSpec
   build-depends:       base >= 4.7 && < 5
                      , hspec == 2.*
                      , quantum
                      , mtl
-                     , vector 
+                     , vector
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
