--- a/qprocessor.cabal
+++ b/qprocessor.cabal
@@ -1,4 +1,4 @@
-name:                quantum
+name:                qprocessor
 version:             0.1.0.0
 build-type:          Simple
 cabal-version:       >=1.10
@@ -17,7 +17,7 @@ library
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
   default-language:    Haskell2010
 
-test-suite quantum-test
+test-suite qprocessor-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
@@ -27,7 +27,7 @@ test-suite quantum-test
                      , Quantum.QProcessor.ManipulatorSpec
   build-depends:       base >= 4.7 && < 5
                      , hspec == 2.*
-                     , quantum
+                     , qprocessor
                      , mtl
                      , vector
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
